move IRC server to module
but leave wikibugs/ircecho alone, they actually are
not related to the IRCd besides being IRC, so should
be their own module.

renamed this from "irc" to "ircd"

Change-Id: I9992a36a254e42c60b016c7115de77c99bbe3058

--- a/modules/ircd/files/apache/irc.wikimedia.org
+++ b/modules/ircd/files/apache/irc.wikimedia.org
@@ -1,8 +1,9 @@
 #####################################################################
 ### THIS FILE IS MANAGED BY PUPPET
-### puppet:///files/apache/sites/irc.wikimedia.org
+### puppet:///modules/ircd/files/apache/irc.wikimedia.org
 #####################################################################
 # vim: filetype=apache
+# redirect irc.wikimedia.org to IRC site on meta.wm.org
 
 <VirtualHost *:80>
 	ServerAdmin noc@wikimedia.org
