--- a/files/apache/sites/noc.wikimedia.org
+++ b/files/apache/sites/noc.wikimedia.org
@@ -51,8 +51,8 @@ NameVirtualHost *:443
 	SSLProtocol -ALL +SSLv3 +TLSv1
 	SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
 	SSLHonorCipherOrder on
-	SSLCertificateFile /etc/ssl/certs/star.wikimedia.org.pem
-	SSLCertificateKeyFile /etc/ssl/private/star.wikimedia.org.key
+	SSLCertificateFile /etc/ssl/certs/noc.wikimedia.org.pem
+	SSLCertificateKeyFile /etc/ssl/private/noc.wikimedia.org.key
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
