--- a/files/apache/sites/contacts.wikimedia.org
+++ b/files/apache/sites/contacts.wikimedia.org
@@ -15,8 +15,8 @@
         SSLProtocol -ALL +SSLv3 +TLSv1
         SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
         SSLHonorCipherOrder on
-        SSLCertificateFile /etc/ssl/certs/star.wikimedia.org.pem
-        SSLCertificateKeyFile /etc/ssl/private/star.wikimedia.org.key
+        SSLCertificateFile /etc/ssl/certs/contacts.wikimedia.org.pem
+        SSLCertificateKeyFile /etc/ssl/private/contacts.wikimedia.org.key
 
 
         <Directory />
