PHAB: deployment scripts to be called by scap
These hooks will be called at various stages during a scap deployment.

* Promote stops phd and disables puppet
* Finalize applies database migrations, runs puppet and reloads phd + apache
* Rollback runs puppet, restarts apache, restarts  phd

Bug: T172847
Change-Id: I3ecdcf2a88e499e44d17bc3009ecab845a93c5c3

--- a/modules/phabricator/README
+++ b/modules/phabricator/README
@@ -75,7 +75,7 @@ Example output:
 
 3.  Run the upgrade script on the Phabricator host
 
-    phab_update_tag
+    /usr/local/sbin/phab_deploy_finalize
 
 This script will manage setting up the migration state, upgrading the DB schema,
 rolling the git repositories to the appropriate tag defined in puppet, and
